# evlampiy_notes_tgbot

./: .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  instructions.md  main.py  pyproject.toml
.github/actions/checkout/: action.yml
.github/actions/scp/: action.yml
.github/actions/setup-buildx/: action.yml
.github/workflows/: deploy.yml
src/: __main__.py  bot.py  chat_params.py  config.py  db.py  dto.py  github_tg_oauth.py  gpt_commands.py  handlers.py  localization.py  mongo.py  obsidian.py  speech.py
tests/: conftest.py  fixtures.py  test_user_flow.py
tests/service/: test_mock.py
