[tool.poetry]
name = "evlampiy-notes-tgbot"
version = "0.1.1"
description = "Telegram bot (Evlampiy) for managing notes"
authors = ["Yast <yastcher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.4.0"
httpx = {extras = ["http2"], version = "^0.27.0"}
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.4"
wit = "^6.0.1"
pydub = "^0.25.1"
openai = "^1.54.3"
pymongo = "^4.10.1"
motor = "^3.5.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = ">0.4.10"
flake8 = "^7.1.0"
flake8-cognitive-complexity = "^0.1.0"
pytest = "^8.3.1"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
