[project]
name = "evlampiy-notes-tgbot"
version = "0.2.1"
description = "Telegram bot (Evlampiy) for managing notes"
authors = ["Yast <yastcher@gmail.com>"]
requires-python = "~=3.12"
dependencies = [
    "python-telegram-bot~=21.11.1",
    "httpx[http2]>=0.28.1",
    "python-dotenv~=1.0.1",
    "pydantic-settings~=2.7.1",
    "wit~=6.0.1",
    "pydub~=0.25.1",
    "openai~=1.59.8",
    "beanie==1.29.0",
]

[dependency-groups]
dev = [
    "black~=24.4.2",
    "flake8~=7.1.0",
    "flake8-cognitive-complexity~=0.1.0",
    "pytest~=8.3.1",
    "pytest-asyncio~=0.23.8",
]
